k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinelai
  labels:
    name: sentinelai
